<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Halele</string>
    <string name="j">j</string>
    <string name="action_settings">Settings</string>
    <string name="quantity_header">Quantity</string>
    <string name="Available">Available Coffies</string>
    <string name="button_text">Order</string>
    <string name="checkbox">CAPPACINO R15</string>
    <string name="order_summary">Order Summary</string>
    <string name="zero">0</string>
    <string name="Slogan">Experience Love At First Sip</string>
    <string name="Add">+</string>
    <string name="R0">R0</string>
    <string name="LOADINGPLEASEWAIT">LOADINGPLEASEWAIT</string>
    <string name="Name">Name</string>

    <string name="MILO">MILO R15</string>
    <string name="JACCOBS">JACCOBS R15</string>
    <string name="HOT_CHOCOLATE">HOT CHOCOLATE R15</string>
    <string name="minus">-</string>

</resources>
